fixed slider js fixed slider css

--- a/wp-content/themes/DMS-FMC/style.css
+++ b/wp-content/themes/DMS-FMC/style.css
@@ -320,3 +320,10 @@ form[name=SimpleSignUp] input[type=text] {
 	}
 	
 }
+
+body .pl-content img.nivo-main-image {
+	height:450px !important;
+}
+.nivo-caption {
+	font-size:40px;
+}
